[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/gear/background/white-background.png" type="Texture" id=1]
[ext_resource path="res://entities/level_maker/level_maker.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/camera/camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/game_interface/game_interface.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/new_computer_1/new_computer_1.tscn" type="PackedScene" id=6]
[ext_resource path="res://levels/prototype_stage/prototype_stage.gd" type="Script" id=7]

[node name="prototype_stage" type="Node2D"]
script = ExtResource( 7 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 152, 88 )
texture = ExtResource( 1 )

[node name="level_maker" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 0, 0, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 3, 0, 65536, 13, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 5, 0, 65542, 5, 0, 65543, 5, 0, 65544, 4, 0, 131072, 13, 0, 131073, 12, 0, 131074, 12, 0, 131075, 12, 0, 131076, 12, 0, 131077, 12, 0, 131078, 12, 0, 131079, 12, 0, 131080, 4, 0, 196608, 13, 0, 196609, 11, 0, 196610, 11, 0, 196611, 11, 0, 196612, 11, 0, 196613, 11, 0, 196614, 11, 0, 196615, 11, 0, 196616, 4, 0, 262144, 17, 0, 262145, 14, 0, 262146, 14, 0, 262147, 14, 0, 262148, 14, 0, 262149, 14, 0, 262150, 14, 0, 262151, 14, 0, 262152, 15, 0 )

[node name="camera" parent="." instance=ExtResource( 3 )]

[node name="ysort" type="YSort" parent="."]

[node name="player" parent="ysort" instance=ExtResource( 5 )]
position = Vector2( 48, 104 )

[node name="new_computer_1" parent="ysort" instance=ExtResource( 6 )]
position = Vector2( 96, 80 )

[node name="game_interface" parent="." instance=ExtResource( 4 )]

[connection signal="freeze_player" from="ysort/new_computer_1" to="." method="_on_new_computer_1_freeze_player"]
[connection signal="quest_done" from="ysort/new_computer_1" to="." method="_on_new_computer_1_quest_done"]
[connection signal="unfreeze_player" from="ysort/new_computer_1" to="." method="_on_new_computer_1_unfreeze_player"]
[connection signal="freeze" from="game_interface" to="." method="_on_game_interface_freeze"]
[connection signal="unfreeze" from="game_interface" to="." method="_on_game_interface_unfreeze"]
